--- a/mobile/package.json
+++ b/mobile/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@expo/vector-icons": "^10.0.0",
     "@react-native-community/masked-view": "^0.1.6",
+    "@react-native-community/slider": "^2.0.8",
     "axios": "^0.19.1",
     "expo": "~36.0.0",
     "expo-location": "~8.0.0",
@@ -24,6 +25,7 @@
     "react-native-web": "~0.11.7",
     "react-native-webview": "7.4.3",
     "react-navigation": "^4.0.10",
+    "react-navigation-drawer": "^2.3.3",
     "react-navigation-stack": "^2.0.15",
     "socket.io-client": "^2.3.0"
   },
